--- a/demo02/src/docker/Dockerfile
+++ b/demo02/src/docker/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /opt/snff
 
 RUN pip3 install --no-cache-dir --upgrade pip && pip3 install --no-cache-dir -r requirements.txt
 
-CMD  python3 -m  hello
+EXPOSE 5000
+
+CMD python3 -m flask run --host=0.0.0.0
